Fixed issue with card overlapping the edit icon when there is a broken image.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -211,6 +211,10 @@ a {
   margin: 3rem 0 2.5rem;
 }
 
+.card-image {
+  min-height: 90px;
+}
+
 .card-image .btn-floating {
   top: 1.25rem;
 }
